Infra/modules/core/gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.environment}-${var.project}-gw"
  }
}
